Extraction des noms et liens des équipes depuis la page FBRef

--- a/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
+++ b/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
@@ -38,6 +38,44 @@
     "driver.get(website) \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cc20e67a",
+   "metadata": {},
+   "source": [
+    "### Extraction des Équipes et de leurs Liens depuis la Page Web"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "5b83a306",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Liverpool', 'https://fbref.com/en/squads/822bd0ba/2024-2025/Liverpool-Stats'), ('Arsenal', 'https://fbref.com/en/squads/18bb7c10/2024-2025/Arsenal-Stats'), ('Manchester City', 'https://fbref.com/en/squads/b8fd03ef/2024-2025/Manchester-City-Stats'), ('Chelsea', 'https://fbref.com/en/squads/cff3d9bb/2024-2025/Chelsea-Stats'), ('Newcastle Utd', 'https://fbref.com/en/squads/b2b47a98/2024-2025/Newcastle-United-Stats'), ('Aston Villa', 'https://fbref.com/en/squads/8602292d/2024-2025/Aston-Villa-Stats'), (\"Nott'ham Forest\", 'https://fbref.com/en/squads/e4a775cb/2024-2025/Nottingham-Forest-Stats'), ('Brighton', 'https://fbref.com/en/squads/d07537b9/2024-2025/Brighton-and-Hove-Albion-Stats'), ('Bournemouth', 'https://fbref.com/en/squads/4ba7cbea/2024-2025/Bournemouth-Stats'), ('Brentford', 'https://fbref.com/en/squads/cd051869/2024-2025/Brentford-Stats'), ('Fulham', 'https://fbref.com/en/squads/fd962109/2024-2025/Fulham-Stats'), ('Crystal Palace', 'https://fbref.com/en/squads/47c64c55/2024-2025/Crystal-Palace-Stats'), ('Everton', 'https://fbref.com/en/squads/d3fd31cc/2024-2025/Everton-Stats'), ('West Ham', 'https://fbref.com/en/squads/7c21e445/2024-2025/West-Ham-United-Stats'), ('Manchester Utd', 'https://fbref.com/en/squads/19538871/2024-2025/Manchester-United-Stats'), ('Wolves', 'https://fbref.com/en/squads/8cec06e1/2024-2025/Wolverhampton-Wanderers-Stats'), ('Tottenham', 'https://fbref.com/en/squads/361ca564/2024-2025/Tottenham-Hotspur-Stats'), ('Leicester City', 'https://fbref.com/en/squads/a2d435b3/2024-2025/Leicester-City-Stats'), ('Ipswich Town', 'https://fbref.com/en/squads/b74092de/2024-2025/Ipswich-Town-Stats'), ('Southampton', 'https://fbref.com/en/squads/33c895d4/2024-2025/Southampton-Stats')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_data = []\n",
+    "team_elements = driver.find_elements(By.CSS_SELECTOR,'td[data-stat=\"team\"] > a')\n",
+    "seen = set()\n",
+    "\n",
+    "for t in team_elements:\n",
+    "    name = t.text.strip()\n",
+    "    href = t.get_attribute('href')\n",
+    "    \n",
+    "    if name and name not in seen:\n",
+    "        team_data.append((name, href))\n",
+    "        seen.add(name)\n",
+    "\n",
+    "print(team_data)"
+   ]
   }
  ],
  "metadata": {
