Chargement des pages des équipes avec gestion des timeouts

--- a/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
+++ b/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
@@ -76,6 +76,101 @@
     "\n",
     "print(team_data)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "a1fd846b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('Liverpool', 'https://fbref.com/en/squads/822bd0ba/2024-2025/Liverpool-Stats')\n",
+      "('Arsenal', 'https://fbref.com/en/squads/18bb7c10/2024-2025/Arsenal-Stats')\n",
+      "('Manchester City', 'https://fbref.com/en/squads/b8fd03ef/2024-2025/Manchester-City-Stats')\n",
+      "('Chelsea', 'https://fbref.com/en/squads/cff3d9bb/2024-2025/Chelsea-Stats')\n",
+      "('Newcastle Utd', 'https://fbref.com/en/squads/b2b47a98/2024-2025/Newcastle-United-Stats')\n",
+      "('Aston Villa', 'https://fbref.com/en/squads/8602292d/2024-2025/Aston-Villa-Stats')\n",
+      "(\"Nott'ham Forest\", 'https://fbref.com/en/squads/e4a775cb/2024-2025/Nottingham-Forest-Stats')\n",
+      "('Brighton', 'https://fbref.com/en/squads/d07537b9/2024-2025/Brighton-and-Hove-Albion-Stats')\n",
+      "('Bournemouth', 'https://fbref.com/en/squads/4ba7cbea/2024-2025/Bournemouth-Stats')\n",
+      "('Brentford', 'https://fbref.com/en/squads/cd051869/2024-2025/Brentford-Stats')\n",
+      "('Fulham', 'https://fbref.com/en/squads/fd962109/2024-2025/Fulham-Stats')\n",
+      "('Crystal Palace', 'https://fbref.com/en/squads/47c64c55/2024-2025/Crystal-Palace-Stats')\n",
+      "('Everton', 'https://fbref.com/en/squads/d3fd31cc/2024-2025/Everton-Stats')\n",
+      "('West Ham', 'https://fbref.com/en/squads/7c21e445/2024-2025/West-Ham-United-Stats')\n",
+      "('Manchester Utd', 'https://fbref.com/en/squads/19538871/2024-2025/Manchester-United-Stats')\n",
+      "('Wolves', 'https://fbref.com/en/squads/8cec06e1/2024-2025/Wolverhampton-Wanderers-Stats')\n",
+      "('Tottenham', 'https://fbref.com/en/squads/361ca564/2024-2025/Tottenham-Hotspur-Stats')\n",
+      "('Leicester City', 'https://fbref.com/en/squads/a2d435b3/2024-2025/Leicester-City-Stats')\n",
+      "('Ipswich Town', 'https://fbref.com/en/squads/b74092de/2024-2025/Ipswich-Town-Stats')\n",
+      "('Southampton', 'https://fbref.com/en/squads/33c895d4/2024-2025/Southampton-Stats')\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in team_data:\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f6848035",
+   "metadata": {},
+   "source": [
+    "### Chargement des Pages Équipes et Gestion des Timeouts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "59db96f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Liverpool...\n",
+      "Loading Arsenal...\n",
+      "Loading Manchester City...\n",
+      "Loading Chelsea...\n",
+      "Loading Newcastle Utd...\n",
+      "Loading Aston Villa...\n",
+      "Loading Nott'ham Forest...\n",
+      "Loading Brighton...\n",
+      "Loading Bournemouth...\n",
+      "Loading Brentford...\n",
+      "Loading Fulham...\n",
+      "Loading Crystal Palace...\n",
+      "Loading Everton...\n",
+      "Loading West Ham...\n",
+      "Loading Manchester Utd...\n",
+      "Loading Wolves...\n",
+      "Loading Tottenham...\n",
+      "Loading Leicester City...\n",
+      "Loading Ipswich Town...\n",
+      "Loading Southampton...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from selenium.common.exceptions import TimeoutException\n",
+    "\n",
+    "for i in range(len(team_data)):\n",
+    "    team, href = team_data[i]\n",
+    "    print(f\"Loading {team}...\")\n",
+    "    driver.get(href)\n",
+    "    try:\n",
+    "        WebDriverWait(driver, 5).until(\n",
+    "            EC.presence_of_element_located((By.CSS_SELECTOR, \"table.stats_table\"))\n",
+    "        )\n",
+    "    except TimeoutException:\n",
+    "        print(f\"Timeout loading {team}, skipping...\")\n",
+    "        continue"
+   ]
   }
  ],
  "metadata": {
