--- a/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
+++ b/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
@@ -171,6 +171,139 @@
     "        print(f\"Timeout loading {team}, skipping...\")\n",
     "        continue"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88305909",
+   "metadata": {},
+   "source": [
+    "### Extraction des Données des Joueurs de Toutes les Équipes et Création du DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "b8fa1462",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading Liverpool...\n",
+      "good\n",
+      "Loading Arsenal...\n",
+      "good\n",
+      "Loading Manchester City...\n",
+      "good\n",
+      "Loading Chelsea...\n",
+      "good\n",
+      "Loading Newcastle Utd...\n",
+      "good\n",
+      "Loading Aston Villa...\n",
+      "good\n",
+      "Loading Nott'ham Forest...\n",
+      "good\n",
+      "Loading Brighton...\n",
+      "good\n",
+      "Loading Bournemouth...\n",
+      "good\n",
+      "Loading Brentford...\n",
+      "good\n",
+      "Loading Fulham...\n",
+      "good\n",
+      "Loading Crystal Palace...\n",
+      "good\n",
+      "Loading Everton...\n",
+      "good\n",
+      "Loading West Ham...\n",
+      "good\n",
+      "Loading Manchester Utd...\n",
+      "good\n",
+      "Loading Wolves...\n",
+      "good\n",
+      "Loading Tottenham...\n",
+      "good\n",
+      "Loading Leicester City...\n",
+      "good\n",
+      "Loading Ipswich Town...\n",
+      "good\n",
+      "Loading Southampton...\n",
+      "good\n",
+      "            Team                 Player   Nation Pos Age  MP Starts    Min  \\\n",
+      "0      Liverpool          Mohamed Salah   eg EGY  FW  32  38     38  3,371   \n",
+      "1      Liverpool        Virgil van Dijk   nl NED  DF  33  37     37  3,330   \n",
+      "2      Liverpool       Ryan Gravenberch   nl NED  MF  22  37     37  3,160   \n",
+      "3      Liverpool    Alexis Mac Allister   ar ARG  MF  25  35     30  2,599   \n",
+      "4      Liverpool        Ibrahima Konaté   fr FRA  DF  25  31     30  2,560   \n",
+      "..           ...                    ...      ...  ..  ..  ..    ...    ...   \n",
+      "749  Southampton     Joachim Kayi Sanda   fr FRA  DF  17   2      0     14   \n",
+      "750  Southampton         Ronnie Edwards  eng ENG  DF  21   1      0     12   \n",
+      "751  Southampton         Carlos Alcaraz   ar ARG  MF  21   1      0     10   \n",
+      "752  Southampton           Jayden Moore           DF       0      0          \n",
+      "753  Southampton  Joe O'Brien-Whitmarsh   ie IRL  MF  19   0      0          \n",
+      "\n",
+      "      90s Gls Ast G+A G-PK PK PKatt CrdY CrdR    xG  \n",
+      "0    37.5  29  18  47   20  9     9    1    0  25.2  \n",
+      "1    37.0   3   1   4    3  0     0    5    0   2.2  \n",
+      "2    35.1   0   4   4    0  0     0    6    1   1.1  \n",
+      "3    28.9   5   5  10    5  0     0    6    0   2.8  \n",
+      "4    28.4   1   2   3    1  0     0    5    0   1.7  \n",
+      "..    ...  ..  ..  ..  ... ..   ...  ...  ...   ...  \n",
+      "749   0.2   0   0   0    0  0     0    0    0   0.0  \n",
+      "750   0.1   0   0   0    0  0     0    0    0   0.0  \n",
+      "751   0.1   0   0   0    0  0     0    0    0   0.1  \n",
+      "752                                                  \n",
+      "753                                                  \n",
+      "\n",
+      "[754 rows x 18 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from selenium.common.exceptions import TimeoutException\n",
+    "all_headers = []\n",
+    "all_teams_data = []\n",
+    "\n",
+    "all_teams_players = []\n",
+    "for i in range(len(team_data)):\n",
+    "    team, href = team_data[i]\n",
+    "    print(f\"Loading {team}...\")\n",
+    "    driver.get(href)\n",
+    "    try:\n",
+    "        WebDriverWait(driver, 10).until(\n",
+    "            EC.presence_of_element_located((By.ID, \"stats_standard_9\"))\n",
+    "        )\n",
+    "        table = driver.find_element(By.ID, 'stats_standard_9')\n",
+    "        \n",
+    "        column_headers = table.find_elements(By.CSS_SELECTOR, \"thead tr:nth-child(2) th\")\n",
+    "        column_headers_text = [h.text for h in column_headers][:17]\n",
+    "        \n",
+    "\n",
+    "        players_rows = table.find_elements(By.CSS_SELECTOR,\"tbody tr\")\n",
+    "        player_data = []\n",
+    "        for row in players_rows:\n",
+    "            player_name = row.find_element(By.TAG_NAME, \"th\").text\n",
+    "            cells = row.find_elements(By.TAG_NAME, \"td\")\n",
+    "            row_data = [player_name]+[cell.text for cell in cells[:16]]\n",
+    "            \n",
+    "            player_data.append(row_data)\n",
+    "            \n",
+    "         \n",
+    "        print(\"good\")\n",
+    "        \n",
+    "        team_df = pd.DataFrame(player_data, columns=column_headers_text)\n",
+    "        team_df.insert(0, \"Team\", team)\n",
+    "        all_teams_data.append(team_df)\n",
+    "        \n",
+    "    except TimeoutException:\n",
+    "        print(f\"Timeout loading {team}, skipping...\")\n",
+    "        continue\n",
+    "    \n",
+    "players_All = pd.concat(all_teams_data,ignore_index=True)\n",
+    "print(players_All)"
+   ]
   }
  ],
  "metadata": {
