--- a/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
+++ b/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
@@ -304,6 +304,432 @@
     "players_All = pd.concat(all_teams_data,ignore_index=True)\n",
     "print(players_All)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "d22d7e65",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Player</th>\n",
+       "      <th>Nation</th>\n",
+       "      <th>Pos</th>\n",
+       "      <th>Age</th>\n",
+       "      <th>MP</th>\n",
+       "      <th>Starts</th>\n",
+       "      <th>Min</th>\n",
+       "      <th>90s</th>\n",
+       "      <th>Gls</th>\n",
+       "      <th>Ast</th>\n",
+       "      <th>G+A</th>\n",
+       "      <th>G-PK</th>\n",
+       "      <th>PK</th>\n",
+       "      <th>PKatt</th>\n",
+       "      <th>CrdY</th>\n",
+       "      <th>CrdR</th>\n",
+       "      <th>xG</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>Mohamed Salah</td>\n",
+       "      <td>eg EGY</td>\n",
+       "      <td>FW</td>\n",
+       "      <td>32</td>\n",
+       "      <td>38</td>\n",
+       "      <td>38</td>\n",
+       "      <td>3,371</td>\n",
+       "      <td>37.5</td>\n",
+       "      <td>29</td>\n",
+       "      <td>18</td>\n",
+       "      <td>47</td>\n",
+       "      <td>20</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>25.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>Virgil van Dijk</td>\n",
+       "      <td>nl NED</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>33</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "      <td>3,330</td>\n",
+       "      <td>37.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>Ryan Gravenberch</td>\n",
+       "      <td>nl NED</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>22</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37</td>\n",
+       "      <td>3,160</td>\n",
+       "      <td>35.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>Alexis Mac Allister</td>\n",
+       "      <td>ar ARG</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>25</td>\n",
+       "      <td>35</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2,599</td>\n",
+       "      <td>28.9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>Ibrahima Konaté</td>\n",
+       "      <td>fr FRA</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>25</td>\n",
+       "      <td>31</td>\n",
+       "      <td>30</td>\n",
+       "      <td>2,560</td>\n",
+       "      <td>28.4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.7</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>Abdukodir Khusanov</td>\n",
+       "      <td>uz UZB</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>20</td>\n",
+       "      <td>6</td>\n",
+       "      <td>6</td>\n",
+       "      <td>503</td>\n",
+       "      <td>5.6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>James Mcatee</td>\n",
+       "      <td>eng ENG</td>\n",
+       "      <td>MF,FW</td>\n",
+       "      <td>21</td>\n",
+       "      <td>15</td>\n",
+       "      <td>3</td>\n",
+       "      <td>349</td>\n",
+       "      <td>3.9</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>Jahmai Simpson-Pusey</td>\n",
+       "      <td>eng ENG</td>\n",
+       "      <td>DF</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>96</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>Rodri</td>\n",
+       "      <td>es ESP</td>\n",
+       "      <td>MF</td>\n",
+       "      <td>28</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>73</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>Divin Mubama</td>\n",
+       "      <td>eng ENG</td>\n",
+       "      <td>FW</td>\n",
+       "      <td>19</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>28</td>\n",
+       "      <td>0.3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 18 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               Team                Player   Nation    Pos Age  MP Starts  \\\n",
+       "0         Liverpool         Mohamed Salah   eg EGY     FW  32  38     38   \n",
+       "1         Liverpool       Virgil van Dijk   nl NED     DF  33  37     37   \n",
+       "2         Liverpool      Ryan Gravenberch   nl NED     MF  22  37     37   \n",
+       "3         Liverpool   Alexis Mac Allister   ar ARG     MF  25  35     30   \n",
+       "4         Liverpool       Ibrahima Konaté   fr FRA     DF  25  31     30   \n",
+       "..              ...                   ...      ...    ...  ..  ..    ...   \n",
+       "95  Manchester City    Abdukodir Khusanov   uz UZB     DF  20   6      6   \n",
+       "96  Manchester City          James Mcatee  eng ENG  MF,FW  21  15      3   \n",
+       "97  Manchester City  Jahmai Simpson-Pusey  eng ENG     DF  18   2      1   \n",
+       "98  Manchester City                 Rodri   es ESP     MF  28   3      1   \n",
+       "99  Manchester City          Divin Mubama  eng ENG     FW  19   1      0   \n",
+       "\n",
+       "      Min   90s Gls Ast G+A G-PK PK PKatt CrdY CrdR    xG  \n",
+       "0   3,371  37.5  29  18  47   20  9     9    1    0  25.2  \n",
+       "1   3,330  37.0   3   1   4    3  0     0    5    0   2.2  \n",
+       "2   3,160  35.1   0   4   4    0  0     0    6    1   1.1  \n",
+       "3   2,599  28.9   5   5  10    5  0     0    6    0   2.8  \n",
+       "4   2,560  28.4   1   2   3    1  0     0    5    0   1.7  \n",
+       "..    ...   ...  ..  ..  ..  ... ..   ...  ...  ...   ...  \n",
+       "95    503   5.6   0   0   0    0  0     0    1    0   0.0  \n",
+       "96    349   3.9   3   0   3    3  0     0    1    0   2.8  \n",
+       "97     96   1.1   0   0   0    0  0     0    1    0   0.0  \n",
+       "98     73   0.8   0   0   0    0  0     0    0    0   0.0  \n",
+       "99     28   0.3   0   0   0    0  0     0    0    0   0.0  \n",
+       "\n",
+       "[100 rows x 18 columns]"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "players_All.head(100)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2f7b30a3",
+   "metadata": {},
+   "source": [
+    "### Extraction des Données des Matchs de Toutes les Équipes et Création du DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "4d23f740",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading matches of Liverpool...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Arsenal...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Manchester City...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Chelsea...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Newcastle Utd...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Aston Villa...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Nott'ham Forest...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Brighton...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Bournemouth...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Brentford...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Fulham...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Crystal Palace...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Everton...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of West Ham...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Manchester Utd...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Wolves...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Tottenham...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Leicester City...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Ipswich Town...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n",
+      "Loading matches of Southampton...\n",
+      "['Date', 'Time', 'Comp', 'Round', 'Day', 'Venue', 'Result', 'GF', 'GA', 'Opponent', 'xG', 'xGA', 'Poss', 'Attendance', 'Captain', 'Formation', 'Opp Formation', 'Referee']\n"
+     ]
+    }
+   ],
+   "source": [
+    "all_teams_data2 = []\n",
+    "for i in range(len(team_data)):\n",
+    "    team, href = team_data[i]\n",
+    "    print(f\"Loading matches of {team}...\")\n",
+    "    \n",
+    "    driver.get(href)\n",
+    "    \n",
+    "    try:\n",
+    "        WebDriverWait(driver, 10).until(\n",
+    "            EC.presence_of_element_located((By.ID, \"matchlogs_for\"))\n",
+    "        )\n",
+    "        \n",
+    "        table = driver.find_element(By.ID, \"matchlogs_for\")\n",
+    "        \n",
+    "        column_headers = table.find_elements(By.CSS_SELECTOR, \"thead tr th\")\n",
+    "        column_headers_text = [h.text for h in column_headers][:-2]\n",
+    "        \n",
+    "        matches_row = table.find_elements(By.CSS_SELECTOR, \"tbody tr\")\n",
+    "       \n",
+    "        matches_data = []\n",
+    "        for row in matches_row:\n",
+    "            matche_date = row.find_element(By.TAG_NAME, \"th\").text\n",
+    "            cells = row.find_elements(By.TAG_NAME, \"td\")\n",
+    "            row_data = [matche_date]+[cell.text for cell in cells[:-2]]\n",
+    "            \n",
+    "            matches_data.append(row_data)\n",
+    "        \n",
+    "        print(column_headers_text)\n",
+    "        \n",
+    "        match_df = pd.DataFrame(matches_data, columns=column_headers_text)\n",
+    "        match_df.insert(0,\"team\",team)\n",
+    "        all_teams_data2.append(match_df)\n",
+    "        \n",
+    "    except TimeoutException:\n",
+    "        print(f\"Timeout loading {team}, skipping...\")\n",
+    "        continue\n",
+    "    \n",
+    "matches_All = pd.concat(all_teams_data2,ignore_index=True) \n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
