Export des données des joueurs et des matchs vers des fichiers CSV

--- a/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
+++ b/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
@@ -730,6 +730,365 @@
     "matches_All = pd.concat(all_teams_data2,ignore_index=True) \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "1bf5ab47",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>team</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>Comp</th>\n",
+       "      <th>Round</th>\n",
+       "      <th>Day</th>\n",
+       "      <th>Venue</th>\n",
+       "      <th>Result</th>\n",
+       "      <th>GF</th>\n",
+       "      <th>GA</th>\n",
+       "      <th>Opponent</th>\n",
+       "      <th>xG</th>\n",
+       "      <th>xGA</th>\n",
+       "      <th>Poss</th>\n",
+       "      <th>Attendance</th>\n",
+       "      <th>Captain</th>\n",
+       "      <th>Formation</th>\n",
+       "      <th>Opp Formation</th>\n",
+       "      <th>Referee</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>2024-08-17</td>\n",
+       "      <td>12:30</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>Matchweek 1</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Away</td>\n",
+       "      <td>W</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ipswich Town</td>\n",
+       "      <td>2.6</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>62</td>\n",
+       "      <td>30,014</td>\n",
+       "      <td>Virgil van Dijk</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>Tim Robinson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>2024-08-25</td>\n",
+       "      <td>16:30</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>Matchweek 2</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>W</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Brentford</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>0.5</td>\n",
+       "      <td>62</td>\n",
+       "      <td>60,017</td>\n",
+       "      <td>Virgil van Dijk</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-4-2</td>\n",
+       "      <td>Stuart Attwell</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>2024-09-01</td>\n",
+       "      <td>16:00</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>Matchweek 3</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Away</td>\n",
+       "      <td>W</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Manchester Utd</td>\n",
+       "      <td>1.8</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>47</td>\n",
+       "      <td>73,738</td>\n",
+       "      <td>Virgil van Dijk</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>Anthony Taylor</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>2024-09-14</td>\n",
+       "      <td>15:00</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>Matchweek 4</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Nott'ham Forest</td>\n",
+       "      <td>0.9</td>\n",
+       "      <td>0.4</td>\n",
+       "      <td>68</td>\n",
+       "      <td>60,344</td>\n",
+       "      <td>Virgil van Dijk</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>Michael Oliver</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Liverpool</td>\n",
+       "      <td>2024-09-17</td>\n",
+       "      <td>21:00 (20:00)</td>\n",
+       "      <td>Champions Lg</td>\n",
+       "      <td>League phase</td>\n",
+       "      <td>Tue</td>\n",
+       "      <td>Away</td>\n",
+       "      <td>W</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>it Milan</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>0.6</td>\n",
+       "      <td>51</td>\n",
+       "      <td>59,826</td>\n",
+       "      <td>Virgil van Dijk</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>Espen Eskås</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>2025-02-02</td>\n",
+       "      <td>16:30 (17:30)</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>Matchweek 24</td>\n",
+       "      <td>Sun</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>W</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Manchester City</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.8</td>\n",
+       "      <td>46</td>\n",
+       "      <td>60,355</td>\n",
+       "      <td>Martin Ødegaard</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>Peter Bankes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>2025-02-05</td>\n",
+       "      <td>20:00 (21:00)</td>\n",
+       "      <td>EFL Cup</td>\n",
+       "      <td>Semi-finals</td>\n",
+       "      <td>Wed</td>\n",
+       "      <td>Away</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Newcastle Utd</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>68</td>\n",
+       "      <td>52,173</td>\n",
+       "      <td>Martin Ødegaard</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>5-4-1</td>\n",
+       "      <td>Simon Hooper</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>2025-02-15</td>\n",
+       "      <td>12:30 (13:30)</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>Matchweek 25</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Away</td>\n",
+       "      <td>W</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Leicester City</td>\n",
+       "      <td>1.4</td>\n",
+       "      <td>0.2</td>\n",
+       "      <td>60</td>\n",
+       "      <td>31,968</td>\n",
+       "      <td>Martin Ødegaard</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>4-2-3-1</td>\n",
+       "      <td>Samuel Barrott</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>2025-02-22</td>\n",
+       "      <td>15:00 (16:00)</td>\n",
+       "      <td>Premier League</td>\n",
+       "      <td>Matchweek 26</td>\n",
+       "      <td>Sat</td>\n",
+       "      <td>Home</td>\n",
+       "      <td>L</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>West Ham</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>68</td>\n",
+       "      <td>60,262</td>\n",
+       "      <td>Martin Ødegaard</td>\n",
+       "      <td>4-3-3</td>\n",
+       "      <td>5-3-2</td>\n",
+       "      <td>Craig Pawson</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>Arsenal</td>\n",
+       "      <td>Date</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 19 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         team        Date           Time            Comp         Round   Day  \\\n",
+       "0   Liverpool  2024-08-17          12:30  Premier League   Matchweek 1   Sat   \n",
+       "1   Liverpool  2024-08-25          16:30  Premier League   Matchweek 2   Sun   \n",
+       "2   Liverpool  2024-09-01          16:00  Premier League   Matchweek 3   Sun   \n",
+       "3   Liverpool  2024-09-14          15:00  Premier League   Matchweek 4   Sat   \n",
+       "4   Liverpool  2024-09-17  21:00 (20:00)    Champions Lg  League phase   Tue   \n",
+       "..        ...         ...            ...             ...           ...   ...   \n",
+       "95    Arsenal  2025-02-02  16:30 (17:30)  Premier League  Matchweek 24   Sun   \n",
+       "96    Arsenal  2025-02-05  20:00 (21:00)         EFL Cup   Semi-finals   Wed   \n",
+       "97    Arsenal  2025-02-15  12:30 (13:30)  Premier League  Matchweek 25   Sat   \n",
+       "98    Arsenal  2025-02-22  15:00 (16:00)  Premier League  Matchweek 26   Sat   \n",
+       "99    Arsenal        Date           None            None          None  None   \n",
+       "\n",
+       "   Venue Result    GF    GA         Opponent    xG   xGA  Poss Attendance  \\\n",
+       "0   Away      W     2     0     Ipswich Town   2.6   0.5    62     30,014   \n",
+       "1   Home      W     2     0        Brentford   2.5   0.5    62     60,017   \n",
+       "2   Away      W     3     0   Manchester Utd   1.8   1.4    47     73,738   \n",
+       "3   Home      L     0     1  Nott'ham Forest   0.9   0.4    68     60,344   \n",
+       "4   Away      W     3     1         it Milan   3.1   0.6    51     59,826   \n",
+       "..   ...    ...   ...   ...              ...   ...   ...   ...        ...   \n",
+       "95  Home      W     5     1  Manchester City   1.0   0.8    46     60,355   \n",
+       "96  Away      L     0     2    Newcastle Utd                68     52,173   \n",
+       "97  Away      W     2     0   Leicester City   1.4   0.2    60     31,968   \n",
+       "98  Home      L     0     1         West Ham   1.2   1.1    68     60,262   \n",
+       "99  None   None  None  None             None  None  None  None       None   \n",
+       "\n",
+       "            Captain Formation Opp Formation         Referee  \n",
+       "0   Virgil van Dijk   4-2-3-1       4-2-3-1    Tim Robinson  \n",
+       "1   Virgil van Dijk   4-2-3-1         4-4-2  Stuart Attwell  \n",
+       "2   Virgil van Dijk   4-2-3-1       4-2-3-1  Anthony Taylor  \n",
+       "3   Virgil van Dijk   4-2-3-1       4-2-3-1  Michael Oliver  \n",
+       "4   Virgil van Dijk   4-2-3-1       4-2-3-1     Espen Eskås  \n",
+       "..              ...       ...           ...             ...  \n",
+       "95  Martin Ødegaard     4-3-3       4-2-3-1    Peter Bankes  \n",
+       "96  Martin Ødegaard     4-3-3         5-4-1    Simon Hooper  \n",
+       "97  Martin Ødegaard     4-3-3       4-2-3-1  Samuel Barrott  \n",
+       "98  Martin Ødegaard     4-3-3         5-3-2    Craig Pawson  \n",
+       "99             None      None          None            None  \n",
+       "\n",
+       "[100 rows x 19 columns]"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matches_All.head(100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "fb350ff6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "players_All.to_csv('../data/players.csv', index=False)\n",
+    "matches_All.to_csv('../data/matches.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
