Modification du notebook Collecte_des_donnees.ipynb pour mise à jour du traitement des données

--- a/src/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
+++ b/src/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "fd1d4590",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 12,
    "id": "5b83a306",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 13,
    "id": "a1fd846b",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 14,
    "id": "59db96f8",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "id": "b8fa1462",
    "metadata": {},
    "outputs": [
@@ -263,8 +263,6 @@
    "source": [
     "import pandas as pd\n",
     "from selenium.common.exceptions import TimeoutException\n",
-    "all_headers = []\n",
-    "all_teams_data = []\n",
     "\n",
     "all_teams_players = []\n",
     "for i in range(len(team_data)):\n",
@@ -295,19 +293,19 @@
     "        \n",
     "        team_df = pd.DataFrame(player_data, columns=column_headers_text)\n",
     "        team_df.insert(0, \"Team\", team)\n",
-    "        all_teams_data.append(team_df)\n",
+    "        all_teams_players.append(team_df)\n",
     "        \n",
     "    except TimeoutException:\n",
     "        print(f\"Timeout loading {team}, skipping...\")\n",
     "        continue\n",
     "    \n",
-    "players_All = pd.concat(all_teams_data,ignore_index=True)\n",
+    "players_All = pd.concat(all_teams_players,ignore_index=True)\n",
     "print(players_All)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "id": "d22d7e65",
    "metadata": {},
    "outputs": [
@@ -619,7 +617,7 @@
        "[100 rows x 18 columns]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -638,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 17,
    "id": "4d23f740",
    "metadata": {},
    "outputs": [
@@ -720,7 +718,7 @@
     "        print(column_headers_text)\n",
     "        \n",
     "        match_df = pd.DataFrame(matches_data, columns=column_headers_text)\n",
-    "        match_df.insert(0,\"team\",team)\n",
+    "        match_df.insert(0,\"Team\",team)\n",
     "        all_teams_data2.append(match_df)\n",
     "        \n",
     "    except TimeoutException:\n",
@@ -733,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "id": "1bf5ab47",
    "metadata": {},
    "outputs": [
@@ -758,7 +756,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>team</th>\n",
+       "      <th>Team</th>\n",
        "      <th>Date</th>\n",
        "      <th>Time</th>\n",
        "      <th>Comp</th>\n",
@@ -1028,7 +1026,7 @@
        "</div>"
       ],
       "text/plain": [
-       "         team        Date           Time            Comp         Round   Day  \\\n",
+       "         Team        Date           Time            Comp         Round   Day  \\\n",
        "0   Liverpool  2024-08-17          12:30  Premier League   Matchweek 1   Sat   \n",
        "1   Liverpool  2024-08-25          16:30  Premier League   Matchweek 2   Sun   \n",
        "2   Liverpool  2024-09-01          16:00  Premier League   Matchweek 3   Sun   \n",
@@ -1070,7 +1068,7 @@
        "[100 rows x 19 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1081,7 +1079,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "fb350ff6",
    "metadata": {},
    "outputs": [],
