Modification du notebook Collecte_des_donnees.ipynb pour mise à jour des scripts de collecte

--- a/src/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
+++ b/src/FOOT-1-Collecte-des-données-footballistiques/Collecte_des_donnees.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "fd1d4590",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "5b83a306",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "a1fd846b",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "59db96f8",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "b8fa1462",
    "metadata": {},
    "outputs": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "d22d7e65",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
        "[100 rows x 18 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "4d23f740",
    "metadata": {},
    "outputs": [
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "id": "1bf5ab47",
    "metadata": {},
    "outputs": [
@@ -1068,7 +1068,7 @@
        "[100 rows x 19 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1079,13 +1079,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "fb350ff6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 754 entries, 0 to 753\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column  Non-Null Count  Dtype \n",
+      "---  ------  --------------  ----- \n",
+      " 0   Team    754 non-null    object\n",
+      " 1   Player  754 non-null    object\n",
+      " 2   Nation  702 non-null    object\n",
+      " 3   Pos     702 non-null    object\n",
+      " 4   Age     702 non-null    object\n",
+      " 5   MP      702 non-null    object\n",
+      " 6   Starts  702 non-null    object\n",
+      " 7   Min     702 non-null    object\n",
+      " 8   90s     702 non-null    object\n",
+      " 9   Gls     702 non-null    object\n",
+      " 10  Ast     702 non-null    object\n",
+      " 11  G+A     702 non-null    object\n",
+      " 12  G-PK    702 non-null    object\n",
+      " 13  PK      702 non-null    object\n",
+      " 14  PKatt   702 non-null    object\n",
+      " 15  CrdY    702 non-null    object\n",
+      " 16  CrdR    702 non-null    object\n",
+      " 17  xG      702 non-null    object\n",
+      "dtypes: object(18)\n",
+      "memory usage: 106.2+ KB\n"
+     ]
+    }
+   ],
    "source": [
     "players_All.to_csv('../../data/raw_data/players.csv', index=False)\n",
-    "matches_All.to_csv('../../data/raw_data/matches.csv', index=False)"
+    "matches_All.to_csv('../../data/raw_data/matches.csv', index=False)\n",
+    "\n",
+    "players_All.info()\n"
    ]
   }
  ],
